--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,8 @@
-//@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap');
-@font-face {
-  font-family: 'HanSerifJP-Bold';
-  src: url('/SourceHanSerifJP-Bold.woff');
-}
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+
 body {
   margin: 0;
-  font-family: 'HanSerifJP-Bold', serif;
+  font-family: 'Racing Sans One', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
